Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-61488

Eventing subdoc operation error out with unknown macro error

    XMLWordPrintable

Details

    • Untriaged
    • 0
    • Unknown

    Description

      Eventing mutateIn spec will return "LCB_ERR_SUBDOC_XATTR_UNKNOWN_MACRO"

      {"exception":"{\n  \"message\": {\n    \"code\": 18,\n    \"desc\": \"LCB_ERR_SUBDOC_XATTR_UNKNOWN_MACRO (324): Subdoc: XATTR unknown macro\",\n    \"name\": \"LCB_ERR_SUBDOC_XATTR_UNKNOWN_MACRO\"\n  },\n  \"stack\": \"Error\\n    at couchbase.mutateIn (couchbase.js:133:24)\\n    at OnUpdate (test.js:7:36)\"\n}","file":"couchbase.js","line":132,"srcLine":"return couchbase.mutateInInternal(bucket, meta, op_array, options);","stack":"Error\n    at couchbase.mutateIn (couchbase.js:133:24)\n    at OnUpdate (test.js:7:36)"}
      

      Attachments

        For Gerrit Dashboard: MB-61488
        # Subject Branch Project Status CR V

        Activity

          People

            sujay.gad Sujay Gad
            ankit.prabhu Ankit Prabhu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty