MB-61488: Initialise subdoc flag value to 0

Change-Id: Ib4a327a57e0f0aec5d2af723e94c8a58966fe0a9
Reviewed-on: https://review.couchbase.org/c/eventing/+/208583
Tested-by: <ankit.prabhu@couchbase.com>
Reviewed-by: <ankit.prabhu@couchbase.com>
(cherry picked from commit 89f0741359482e161a1cc1920a9780b750db8569)
Reviewed-on: https://review.couchbase.org/c/eventing/+/207900
Well-Formed: Restriction Checker